# python-typesafe-resource-management

./: .gitignore  LICENSE  MANIFEST.in  README.md  publish.sh  pyproject.toml
demo/: resource_definition.py  run.py
demo/resources/: data.json  main.txt  speech_0.txt  speech_1.txt  speech_2.txt
src/: __init__.py  lib.py  middlewares.py
src/pathtyped/: __init__.py  lib.py  loaders.py  middlewares.py
test/: defaults.py  definition.py  test_main.py
test/resources/: root.py
test/resources/images/cleaner/: sheet.py
test/resources/images/player/: sheet.py
test/resources/level/: gypst1.tsx  landset.tsx  longweedset.tsx  skyboxset.tsx  tropics.tmx  underset.tsx  waterset.tsx
test/resources/mod/: __init__.py
