[project]
name = "pathtyped"
version = "0.1.0"
description = "Create static path checking and type checking for your Python code"
readme = "README.md"
authors = [{ name = "nopeless" }]
license = { file = "LICENSE" }
keywords = ["path", "file", "type"]
requires-python = ">=3.9"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools", "wheel"]

[project.optional-dependencies]
dev = ["black", "pytest"]

[project.urls]
Homepage = "https://github.com/nopeless/python-typesafe-resource-management"
"Bug Tracker" = "https://github.com/nopeless/python-typesafe-resource-management/issues"
